# EasyLearner

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
assets/: style.qss
forms/: AddDefinition.ui  AddQuestion.ui  CreateTopic.ui  DefinitionAddition.ui  MainMenu.ui  ManageTopic.ui  QuestionAddition.ui  StudyDefinitions.ui  StudyQuestions.ui  TopicContent.ui  TopicCreation.ui  TopicDefinitions.ui  TopicManagement.ui  TopicQuestions.ui  TopicStudy.ui  ui_AddDefinition.h  ui_AddQuestion.h  ui_DefinitionAddition.h  ui_ManageTopic.h  ui_QuestionAddition.h  ui_StudyQuestions.h  ui_TopicContent.h  ui_TopicCreation.h  ui_TopicDefinitions.h  ui_TopicManagement.h  ui_TopicQuestions.h  ui_TopicStudy.h
include/: adddefinition.h  addquestion.h  createtopic.h  mainmenu.h  managetopic.h  studyquestions.h  topiccontent.h  topicdefinitions.h  topicquestions.h  topicstudy.h
include/core/: mainwindow.h  pageindex.h
include/mainmenu/: createtopic.h  mainmenu.h  topiccreation.h
include/topic/: managetopic.h
include/topic/base/: content.h  contentmanager.h  managetopic.h  topicmanagement.h
include/topic/content/: itopiccontentmanagement.h  topiccontent.h  topiccontentmanagement.h  topicdefinitions.h  topicquestions.h
include/topic/creation/: adddefinition.h  addquestion.h  contentaddition.h  definitionaddition.h  icontentaddition.h  questionaddition.h
include/topic/study/: istudycontent.h  studycontent.h  studydefinitions.h  studyquestions.h  topicstudy.h
include/utils/: database.h  randomizer.h  soundplayer.h
resources/: resources.qrc  resources.rc
src/: adddefinition.cpp  addquestion.cpp  createtopic.cpp  main.cpp  mainmenu.cpp  managetopic.cpp  studyquestions.cpp  topiccontent.cpp  topicdefinitions.cpp  topicquestions.cpp  topicstudy.cpp
src/core/: main.cpp  mainwindow.cpp
src/mainmenu/: createtopic.cpp  main.cpp  mainmenu.cpp  topiccreation.cpp
src/topic/: managetopic.cpp
src/topic/base/: content.cpp  contentmanager.cpp  managetopic.cpp  topicmanagement.cpp
src/topic/content/: itopiccontentmanagement.cpp  topiccontent.cpp  topiccontentmanagement.cpp  topicdefinitions.cpp  topicquestions.cpp
src/topic/creation/: adddefinition.cpp  addquestion.cpp  contentaddition.cpp  definitionaddition.cpp  icontentaddition.cpp  questionaddition.cpp
src/topic/study/: istudycontent.cpp  studycontent.cpp  studydefinitions.cpp  studyquestions.cpp  topicstudy.cpp
src/utils/: database.cpp  randomizer.cpp  soundplayer.cpp
